--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,25 +3,10 @@
   "version": "5.1.7",
   "private": true,
   "scripts": {
-    "analyze": "ANALYZE=true next build",
-    "analyze:server": "BUNDLE_ANALYZE=server next build",
-    "analyze:browser": "BUNDLE_ANALYZE=browser next build",
-    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .next",
-    "dev": "next dev --turbopack",
-    "dev:cron": "ts-node cron-tester.ts",
-    "dev-https": "NODE_TLS_REJECT_UNAUTHORIZED=0 next dev --experimental-https",
-    "dx": "yarn dev",
-    "test-codegen": "yarn playwright codegen http://localhost:3000",
-    "type-check": "tsc --pretty --noEmit",
-    "type-check:ci": "tsc-absolute --pretty --noEmit",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint . --ignore-path .gitignore",
-    "lint:fix": "eslint . --ext .ts,.js,.tsx,.jsx --fix",
-    "lint:report": "eslint . --format json --output-file ../../lint-results/web.json",
-    "check-changed-files": "ts-node scripts/ts-check-changed-files.ts",
-    "translate-locales": "ts-node scripts/check-missing-translations.ts",
-    "stripe:listen": "stripe listen --forward-to http://localhost:3000/api/stripe/webhook"
+    "dev": "next dev",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
+    "test:ui": "vitest --ui"
   },
   "engines": {
     "yarn": "3.4.1"
@@ -189,7 +174,8 @@
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "vitest": "^3.0.9"
   },
   "nextBundleAnalysis": {
     "budget": 358400,
